resources/public/css/main.css
/* ... */
main.with-article {
	background: white;
}

/* The header (logo, input bar) transitions from center to top.  */
header {
	width: 100%;

    /* align approximately in the center when*/
	margin-top: 33.3vh;

	/* Faster going down than up! */
	transition: all 0.3s;
}

main.with-article > header {
	/* Slower going up than down. */
	transition: all 0.5s;

    /* Add some colours. */
	background: #FCFCFB;
	border-bottom: solid 1pt #DDDDDD;

    /* Go to the top of the page (resets  margin set in header) */
	margin-top: 0;
}

/* 	TODO: do I need this?
    aligner is necessary for limiting width and centering horisontally!
	without "min-width:98%;" in .vcenter, .vcentor gets crammed,
	so this extra class is necessary to get a max-width.
*/
header div#aligner {
	max-width: 80ch;
	margin: auto;
	padding: 1ch;
	text-align: center;
	vertical-align: middle;

	/* makes logo img able to assume 0 height */
	line-height: 0;
}

/*  The main logo of the site fades in like most elements and gets smaller
    when the site displays some page content. */
header img {
	animation: fade-in 0.5s ease;
	transition: all 0.3s;
    max-height: 7em;
    margin-bottom: 2em;
	width: 90%; /* otherwise image could overflow on small page widths */

    /* TODO: find fixes for non-Chrome browsers */
    user-drag: none;
    user-select: none;
}

main.with-article > header img {
	max-height: 0;
	margin: 0;
	vertical-align: middle;
}

/* Also known as the #study-form */
div#header-input {
	display: flex;
}

/* Formerly known as the #study-input */
div#header-input > input {
	animation: fade-in 1s ease;
    transition: all 0.5s;

	font-size: 20pt;
	color: black;

	padding: 0.2ch 0.4ch;
	border: 1pt solid #999999;
	border-radius: 0.5ch;
	background-color: white;

	/* Take up full width */
    flex: 1;
}

/* Grey colouring of input when action-chooser is active */
div#header-input > input[disabled] {
	background-color: #DDDDDD;
}

/* Formerly known as the #study-button */
div#header-input > button {
	border: 0;
	padding: 0;
	font-size: 0;
	width: 0;
}



/* === VERSION NUMBER === */
address {
	animation: fade-in 3s ease;
	color: #DDD;
	font-size: 10pt;
	font-style: inherit;
	letter-spacing: 0.2ch;
	position: absolute;
	padding: 1em;
	right: 0;
	top: 0;
	transition: all 0.5s;
}

main.with-article address {
    opacity: 0;
}




/* === FILTERS === */
div#filters {
    transition: all 0.3s;
    margin: 1.2em 0 0.3em 0;
    font-size: 12pt;
    color: #DDDDDD; /* for the separating dots */
    letter-spacing: 0.3ch;
    word-spacing: 0.5ch;
    text-align: center;
}

/* TODO: there is a slight cursor flicker on hover I can't seem to remove */
/* the opacity of the labels is changed back instantly to avoid overflow */
div#filters.hidden {
    transition: height 0.3s, margin 0.3s, opacity 0s;
    height: 0;
    margin: 0;
    opacity: 0;
    display: hidden; /* make sure it's not selectable */
}

div#filters input[type=radio] {
    /* hide the actual radio button */
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

div#filters input[type=radio] + label {
    cursor: pointer;
    color: #CCCCCC;
    transition: all 0.5s;
}

div#filters input[type=radio] + label:hover {
    text-decoration: underline;
}

div#filters input[type=radio]:checked + label {
    color: black;
}

div#filters input[type=radio]:checked + label:hover {
    text-decoration: none;
    cursor: default;
}




/* === ARTICLE === */

/* controls where the content appears */
article {
	animation: fade-in 0.5s ease;
	transition: all 0.3s; /* should be synchronised with filters transition */

	/* take up all middle space and allow for scrolling */
    flex-grow: 1;
    overflow: auto;

	/* box */
    box-sizing: border-box; /* allow 100% width + padding with not overflow */
	width: 100%;
	height: 100%;
	padding: 1ch;
	max-width: 80ch;
}



/* === FOOTER === */

footer {
	animation: fade-in 1.5s ease;

	/* text */
	text-align: center;

	/* box */
	background: #BB5544;
	padding: 1.2em 0;
	width: 100%;

	/* shadow */
	box-shadow: inset 0 0 1.5rem 0 rgba(0, 0, 0, 0.3);
}

nav {
	/* text-related */
    font-size: 12pt;
    word-spacing: 0.3ch;
    line-height: 1em;
    color: #FFBBBB;
}

nav a {
    letter-spacing: 0.4ch;
}

nav > #script-changer {
    padding: 0.2em 0.5em;
    border: 1pt solid #CC6666;
    border-radius: 0.5ch;
    color: #FFBBBB;
    cursor: pointer;

    /* nav links shouldn't jump around when changing script */
    display: inline-block;
    min-width: 7ch;

    /* fix for #14 (translation pop-up on Chrome mobile) */
    user-drag: none;
    user-select: none;
}

nav > #script-changer:hover {
	text-decoration: none;
	color: white;
	border-color: white;
}

footer a {
	color: white;
}

footer a:hover {
	color: white;
	text-decoration: underline;
}

footer a.current-page, footer a.current-page:hover {
	color: #661111;
	text-decoration: none;
}




/* === ACTION CHOOSER === */

fieldset#actions {
    /* box */
    padding: 2ch;
    width: 40ch;
	background: #BB5544;
    border: none;
    border-radius: 1ch;
    box-shadow: 0 4pt 12pt 0 rgba(0, 0, 0, 0.2),
                0 4pt 12pt 0 rgba(0, 0, 0, 0.19),
                inset 0 0 1rem 0 rgba(0, 0, 0, 0.3);

    /* center vertically
      adapted from .main */
    z-index: 2;
    position: fixed;
    top: 50%; /* using 50% looks off somehow...*/
    left: 50%;
    transform: translate(-50%, -70%);
    -webkit-transform: translate(-50%, -70%);
    -moz-transform: translate(-50%, -70%);
    -o-transform: translate(-50%, -70%);
    -ms-transform: translate(-50%, -70%);

    /* expand to fit content
       https://teamtreehouse.com/community/how-can-i-make-my-divs-grow-wider-according-to-their-content */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    animation: fade-in 0.3s linear;
}

fieldset#actions * {
    color: #FFBBBB;
}
/* ... */

